--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.14 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.2.0 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -208,8 +208,14 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
-  .bottom-\[3px\] {
-    bottom: 3px;
+  .start {
+    inset-inline-start: var(--spacing);
+  }
+  .end {
+    inset-inline-end: var(--spacing);
+  }
+  .bottom-0\.75 {
+    bottom: calc(var(--spacing) * 0.75);
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
@@ -292,8 +298,8 @@
   .table {
     display: table;
   }
-  .h-\[2px\] {
-    height: 2px;
+  .h-0\.5 {
+    height: calc(var(--spacing) * 0.5);
   }
   .h-auto {
     height: auto;
@@ -305,16 +311,16 @@
     width: 100%;
   }
   .max-w-9\/10 {
-    max-width: calc(9/10 * 100%);
+    max-width: calc(9 / 10 * 100%);
   }
   .basis-1\/2 {
-    flex-basis: calc(1/2 * 100%);
+    flex-basis: calc(1 / 2 * 100%);
   }
   .basis-1\/4 {
-    flex-basis: calc(1/4 * 100%);
+    flex-basis: calc(1 / 4 * 100%);
   }
   .basis-2\/4 {
-    flex-basis: calc(2/4 * 100%);
+    flex-basis: calc(2 / 4 * 100%);
   }
   .-rotate-2 {
     rotate: calc(2deg * -1);
@@ -548,10 +554,10 @@
       position: absolute;
     }
   }
-  .after\:-bottom-0 {
+  .after\:bottom-0 {
     &::after {
       content: var(--tw-content);
-      bottom: calc(var(--spacing) * -0);
+      bottom: calc(var(--spacing) * 0);
     }
   }
   .after\:left-0 {
@@ -560,10 +566,10 @@
       left: calc(var(--spacing) * 0);
     }
   }
-  .after\:h-\[2px\] {
+  .after\:h-0\.5 {
     &::after {
       content: var(--tw-content);
-      height: 2px;
+      height: calc(var(--spacing) * 0.5);
     }
   }
   .after\:w-full {
@@ -699,7 +705,7 @@
   }
   .md\:basis-1\/2 {
     @media (width >= 48rem) {
-      flex-basis: calc(1/2 * 100%);
+      flex-basis: calc(1 / 2 * 100%);
     }
   }
   .md\:flex-row {
@@ -763,17 +769,17 @@
   }
   .lg\:w-1\/2 {
     @media (width >= 64rem) {
-      width: calc(1/2 * 100%);
+      width: calc(1 / 2 * 100%);
     }
   }
   .lg\:max-w-8\/10 {
     @media (width >= 64rem) {
-      max-width: calc(8/10 * 100%);
+      max-width: calc(8 / 10 * 100%);
     }
   }
   .lg\:basis-1\/2 {
     @media (width >= 64rem) {
-      flex-basis: calc(1/2 * 100%);
+      flex-basis: calc(1 / 2 * 100%);
     }
   }
   .lg\:flex-row {
@@ -850,9 +856,9 @@
       display: block;
     }
   }
-  .xl\:h-\[3px\] {
+  .xl\:h-0\.75 {
     @media (width >= 80rem) {
-      height: 3px;
+      height: calc(var(--spacing) * 0.75);
     }
   }
   .xl\:p-20 {
